# MPIM

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  dump.rdb  simple_redis_test  simple_redis_test.cpp  test_mermaid.md
.history/: .gitignore_20250911172103  .gitignore_20250912111247  .gitignore_20250912203019  .gitignore_20250912203021  .gitignore_20250912203024  .gitignore_20250912203029  CMakeLists_20250912201747.txt  CMakeLists_20250914174811.txt  CMakeLists_20250914175814.txt  CMakeLists_20250914180423.txt  CMakeLists_20250916125406.txt  CMakeLists_20250916163013.txt  CMakeLists_20251012142416.txt  CMakeLists_20251102153424.txt  CMakeLists_20251102153655.txt  README_20250914200958.md  README_20250914201300.md  README_20250914201308.md  README_20250916105158.md  README_20250916105203.md  README_20250916170958.md  README_20250916171004.md  README_20250916171009.md  README_20250916171017.md  README_20250916171024.md  README_20250916171031.md  README_20250916171041.md  README_20250916171052.md  README_20250916174154.md  README_20250916194933.md  README_20250916194942.md  README_20250916200523.md  README_20250919151916.md  README_20250919151933.md  README_20250919151942.md  README_20250919162011.md  README_20250919172402.md  debug_message_flow_20250913185942.md  debug_message_flow_20250914143837.sh  demo_usage_20250912201728.md  (+36 more)
.history/benchmarks/: CMakeLists_20250911200523.txt  CMakeLists_20250911210320.txt  CMakeLists_20250912111136.txt  e2e_latency_bench_20250912111136.cc  gateway_e2e_bench_20250911200523.cc  gateway_e2e_bench_20251012155106.cc  gateway_e2e_bench_20251012155111.cc  gateway_e2e_bench_20251012155114.cc  gateway_e2e_bench_20251012212028.cc  register_users_20250911210342.cc  register_users_20251012144903.cc  rpc_roundtrip_bench_20251102150021.cc
.history/conf/: im-gateway_20250919101927.conf  im-gateway_20250919102708.conf  im-gateway_20250919103040.conf  im-gateway_20250919103114.conf  im-groupd_20250919102323.conf  im-groupd_20250919102708.conf  im-groupd_20250919102755.conf  im-messaged_20250919102315.conf  im-messaged_20250919102325.conf  im-presence_20250919102323.conf  im-presence_20250919102904.conf  im-presence_20250919103040.conf  im-presence_20250919103113.conf  im-userd_20250919102000.conf  im-userd_20250919102904.conf  im-userd_20250919103040.conf  im-userd_20250919103114.conf  mprpc_20250919101931.conf  mprpc_20250919102904.conf  mprpc_20250919103040.conf  mprpc_20250919103114.conf
.history/docs/: README_20250916105025.md  README_20250916105032.md  README_20250916105040.md  README_20250916105043.md  README_20250916171347.md  README_20250916171354.md  README_20250916171401.md  README_20250916171432.md  README_20250916173727.md  README_20250916174552.md  README_20250916200549.md  README_20250916204326.md  README_20250917160957.md  README_20250917164329.md  README_20250917171220.md  README_20250917185441.md  README_20250917220452.md  README_20250923160122.md  README_20250923160132.md  README_20250923160210.md  README_20250923160220.md  README_20250923160350.md  README_20250923160400.md
.history/im-common/: CMakeLists_20250914205719.txt  CMakeLists_20250914205849.txt  CMakeLists_20250916111422.txt  CMakeLists_20250916111534.txt  CMakeLists_20250916145305.txt  CMakeLists_20250916150130.txt  CMakeLists_20250916151106.txt
.history/im-gateway/: CMakeLists_20250914174320.txt  CMakeLists_20250916162501.txt
.history/im-group/: CMakeLists_20250912201747.txt  (+4 more)
benchmarks/: CMakeLists.txt  e2e_latency_bench.cc  gateway_e2e_bench.cc  register_users.cc
im-client/: CMakeLists.txt
im-client/src/: client.cc  commandHandler.cc  main.cc
im-client/src/include/: client.hpp  commandHandler.hpp  lockqueue.hpp
im-common/: CMakeLists.txt
im-gateway/: CMakeLists.txt
im-gateway/src/: gatewayServer.cc
im-gateway/src/include/: gatewayServer.h
im-group/: CMakeLists.txt
im-message/: CMakeLists.txt
im-message/include/: message_service.h  offline_model.h
im-message/src/: main.cc  message_service.cc  offline_model.cc
im-message/src/include/: message_service.h  offline_model.h
im-presence/: CMakeLists.txt
im-presence/include/: presence_service.h
im-presence/src/: CMakeLists.txt  main.cc  presence_service.cc
im-presence/src/include/: presence_service.h
im-user/: CMakeLists.txt
im-user/src/: CMakeLists.txt  health_service.cc  main.cc  user_service.cc
im-user/src/include/: health_service.h  user_service.h
mprpc/: CMakeLists.txt
mprpc/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
mprpc/src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/: client  client.cpp  mainxfjasdof.cpp  server  server.cpp
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
(+1061 files in other folders)
